--- a/Stuttering App/Reading/Reading.storyboard
+++ b/Stuttering App/Reading/Reading.storyboard
@@ -353,12 +353,12 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dafButton" destination="UoY-lf-LmE" id="pBf-SH-rJb"/>
                         <outlet property="decreaseSpeedButton" destination="R5c-la-uae" id="Pi3-lD-U7y"/>
                         <outlet property="increaseSpeedButton" destination="Hmv-Rn-6oP" id="JdM-eu-BfA"/>
                         <outlet property="playPauseButton" destination="FVY-1n-Vx8" id="Zhz-fW-2PT"/>
                         <outlet property="resetButton" destination="2JN-fA-DwT" id="QuB-uz-59w"/>
                         <outlet property="showResult" destination="VuW-PA-ch2" id="9xY-gR-Pjz"/>
-                        <outlet property="speedButton" destination="UoY-lf-LmE" id="pBf-SH-rJb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HPy-8e-DPk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -409,56 +409,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bPv-Mq-0HV">
-                                <rect key="frame" x="16" y="172" width="361" height="350"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPv-Mq-0HV">
+                                <rect key="frame" x="0.0" y="172" width="393" height="350"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="OtU-EP-fG7">
-                                        <rect key="frame" x="8" y="8" width="345" height="302"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8g-hH-Pj8">
+                                        <rect key="frame" x="20" y="20" width="353" height="330"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OtU-EP-fG7">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="330"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" name=".SFNS-Regular" family=".AppleSystemUIFont" pointSize="12"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="345" id="7Mk-LU-tsm"/>
+                                            <constraint firstItem="OtU-EP-fG7" firstAttribute="leading" secondItem="T8g-hH-Pj8" secondAttribute="leading" id="IN6-3t-iWm"/>
+                                            <constraint firstAttribute="trailing" secondItem="OtU-EP-fG7" secondAttribute="trailing" id="fBd-Vz-M6B"/>
+                                            <constraint firstAttribute="bottom" secondItem="OtU-EP-fG7" secondAttribute="bottom" id="fQs-jl-y1J"/>
+                                            <constraint firstItem="OtU-EP-fG7" firstAttribute="top" secondItem="T8g-hH-Pj8" secondAttribute="top" id="u7V-ih-wxc"/>
                                         </constraints>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                        <color key="textColor" systemColor="labelColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Delayed Auditory Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gzo-5I-GZI">
-                                        <rect key="frame" x="29.000000000000014" y="318" width="218.33333333333337" height="20.333333333333485"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvQ-9N-sfc">
-                                        <rect key="frame" x="300" y="314" width="63" height="28"/>
-                                    </switch>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dLf-oj-NxE">
-                                        <rect key="frame" x="8" y="320" width="15.666666666666668" height="17.666666666666515"/>
-                                        <imageReference key="image" image="ear.badge.checkmark" catalog="system" symbolScale="small" renderingMode="hierarchical">
-                                            <hierarchicalColors>
-                                                <color systemColor="labelColor"/>
-                                                <color systemColor="secondaryLabelColor"/>
-                                                <color systemColor="tertiaryLabelColor"/>
-                                            </hierarchicalColors>
-                                        </imageReference>
-                                    </imageView>
+                                    </view>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jfk-t8-ko0">
+                                        <rect key="frame" x="20" y="306" width="353" height="44"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delayed Auditory Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gzo-5I-GZI">
+                                                <rect key="frame" x="21" y="0.0" width="218" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="218" id="F3Q-mO-rhS"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dLf-oj-NxE">
+                                                <rect key="frame" x="0.0" y="2" width="16" height="25.333333333333332"/>
+                                                <imageReference key="image" image="ear.badge.checkmark" catalog="system" symbolScale="small" renderingMode="hierarchical">
+                                                    <hierarchicalColors>
+                                                        <color systemColor="labelColor"/>
+                                                        <color systemColor="secondaryLabelColor"/>
+                                                        <color systemColor="tertiaryLabelColor"/>
+                                                    </hierarchicalColors>
+                                                </imageReference>
+                                            </imageView>
+                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bvQ-9N-sfc">
+                                                <rect key="frame" x="276" y="0.0" width="79" height="28"/>
+                                            </switch>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Gzo-5I-GZI" firstAttribute="top" secondItem="dLf-oj-NxE" secondAttribute="top" id="4Wm-oc-GwQ"/>
+                                            <constraint firstItem="bvQ-9N-sfc" firstAttribute="top" secondItem="jfk-t8-ko0" secondAttribute="top" id="Tbl-Ll-9sM"/>
+                                            <constraint firstItem="Gzo-5I-GZI" firstAttribute="leading" secondItem="jfk-t8-ko0" secondAttribute="leading" constant="21" id="Xpk-Mf-bFc"/>
+                                            <constraint firstAttribute="trailing" secondItem="bvQ-9N-sfc" secondAttribute="trailing" id="Zra-En-hfy"/>
+                                            <constraint firstItem="Gzo-5I-GZI" firstAttribute="bottom" secondItem="bvQ-9N-sfc" secondAttribute="bottom" id="aVr-Ue-17J"/>
+                                            <constraint firstItem="dLf-oj-NxE" firstAttribute="top" secondItem="jfk-t8-ko0" secondAttribute="top" id="j1a-LC-pw1"/>
+                                            <constraint firstItem="Gzo-5I-GZI" firstAttribute="centerY" secondItem="dLf-oj-NxE" secondAttribute="centerY" id="qWn-sY-8pO"/>
+                                            <constraint firstItem="dLf-oj-NxE" firstAttribute="leading" secondItem="jfk-t8-ko0" secondAttribute="leading" id="wLv-hl-9s1"/>
+                                            <constraint firstItem="bvQ-9N-sfc" firstAttribute="leading" secondItem="Gzo-5I-GZI" secondAttribute="trailing" constant="37" id="z5o-Sn-C4p"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="bvQ-9N-sfc" secondAttribute="trailing" id="2ME-rw-7Tb"/>
-                                    <constraint firstItem="OtU-EP-fG7" firstAttribute="top" secondItem="bPv-Mq-0HV" secondAttribute="top" constant="8" id="95v-g8-tnM"/>
-                                    <constraint firstItem="dLf-oj-NxE" firstAttribute="top" secondItem="OtU-EP-fG7" secondAttribute="bottom" constant="8" symbolic="YES" id="ANl-GA-12f"/>
-                                    <constraint firstItem="bvQ-9N-sfc" firstAttribute="top" secondItem="OtU-EP-fG7" secondAttribute="bottom" constant="4" id="Mel-KZ-F9Q"/>
-                                    <constraint firstItem="OtU-EP-fG7" firstAttribute="leading" secondItem="bPv-Mq-0HV" secondAttribute="leading" constant="8" id="UEt-4C-hea"/>
-                                    <constraint firstItem="dLf-oj-NxE" firstAttribute="leading" secondItem="bPv-Mq-0HV" secondAttribute="leading" constant="8" id="jih-71-Htg"/>
-                                    <constraint firstItem="Gzo-5I-GZI" firstAttribute="leading" secondItem="dLf-oj-NxE" secondAttribute="trailing" constant="7.6699999999999999" id="oPf-eS-Ym9"/>
-                                    <constraint firstItem="Gzo-5I-GZI" firstAttribute="top" secondItem="OtU-EP-fG7" secondAttribute="bottom" constant="8" symbolic="YES" id="vwy-fK-Je8"/>
-                                    <constraint firstItem="bvQ-9N-sfc" firstAttribute="top" secondItem="OtU-EP-fG7" secondAttribute="bottom" constant="4" id="ygQ-R0-tnP"/>
+                                    <constraint firstItem="jfk-t8-ko0" firstAttribute="leading" secondItem="bPv-Mq-0HV" secondAttribute="leading" constant="20" id="1Kw-EI-oDe"/>
+                                    <constraint firstItem="T8g-hH-Pj8" firstAttribute="leading" secondItem="bPv-Mq-0HV" secondAttribute="leading" constant="20" id="8na-AW-l4E"/>
+                                    <constraint firstAttribute="trailing" secondItem="T8g-hH-Pj8" secondAttribute="trailing" constant="20" id="BAm-9R-wWN"/>
+                                    <constraint firstAttribute="trailing" secondItem="jfk-t8-ko0" secondAttribute="trailing" constant="20" id="Be5-oD-km2"/>
+                                    <constraint firstItem="T8g-hH-Pj8" firstAttribute="top" secondItem="bPv-Mq-0HV" secondAttribute="top" constant="20" id="D9D-6V-R6I"/>
+                                    <constraint firstItem="jfk-t8-ko0" firstAttribute="bottom" secondItem="T8g-hH-Pj8" secondAttribute="bottom" id="QLj-aD-e2j"/>
+                                    <constraint firstAttribute="bottom" secondItem="jfk-t8-ko0" secondAttribute="bottom" id="nWA-FB-mGD"/>
+                                    <constraint firstAttribute="height" constant="350" id="rc1-Pl-eDj"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="okH-Uz-BBA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bPv-Mq-0HV" firstAttribute="top" secondItem="okH-Uz-BBA" secondAttribute="top" id="Ccs-dp-C4H"/>
+                            <constraint firstItem="okH-Uz-BBA" firstAttribute="trailing" secondItem="bPv-Mq-0HV" secondAttribute="trailing" id="cyd-fi-fIV"/>
+                            <constraint firstItem="bPv-Mq-0HV" firstAttribute="leading" secondItem="okH-Uz-BBA" secondAttribute="leading" id="e0P-is-8cA"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3Ds-c2-Wlx"/>
                     <connections>
@@ -498,13 +530,13 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="tertiaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29803921568627451" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29803921570000003" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
